--- a/deploy/redis.yml
+++ b/deploy/redis.yml
@@ -13,6 +13,17 @@ spec:
     - protocol: TCP
       port: 6379
 ---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: redis-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,11 +41,18 @@ spec:
       annotations:
         sidecar.istio.io/inject: "true"
     spec:
+      volumes:
+      - name: data
+        persistentVolumeClaim:
+          claimName: redis-data
       containers:
       - name: redis
         image: redis
         resources:
           limits:
             memory: 128Mi
+        volumeMounts:
+        - name: data
+          mountPath: /data
         ports:
         - containerPort: 6379
