--- a/deploy/rbac.yml
+++ b/deploy/rbac.yml
@@ -1,7 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  name: kad
+  name: kad-sa-admin
+  namespace: kad
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -9,4 +10,3 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: default
-    namespace: kad
