--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,10 @@ build:
       - build_out/
     expire_in: 4 week
   script:
+    - apt-get update
+    - apt-get install -y upx-ucl
     - CGO_ENABLED=0 go build -o build_out/kad
+    - upx build_out/*
 
 container:
   <<: *job
