--- a/helm/templates/ingress.yml
+++ b/helm/templates/ingress.yml
@@ -50,4 +50,11 @@ spec:
     services:
     - name: kad
       port: 80
+      weight: 1000
+    {{- range $h, $fb := .Values.fallbacks }} 
+    # fallback {{ $fb }}
+    - name: kad-fallback-{{ $h }}
+      port: 80
+      weight: 1
+    {{- end }}
 {{ end }}
