--- a/helm/templates/deploy.yml
+++ b/helm/templates/deploy.yml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kad
+  annotations:
+    prometheus.io/scrape: "{{ .Values.prometheus.enabled }}"
 spec:
   selector:
     app: kad
