--- a/cluster/templates/app.yml
+++ b/cluster/templates/app.yml
@@ -26,6 +26,8 @@ spec:
         #{{- range $hi, $fb := $values.clusters }} 
         #{{ if eq $fb $cluster }}#{{ end }}- kad.{{ $fb }}.k8s.6shore.net
         #{{- end }}
+        ingress:
+          enabled: true
   project: default
   syncPolicy:
     automated:
