--- a/helm/templates/deploy.yml
+++ b/helm/templates/deploy.yml
@@ -7,7 +7,7 @@ metadata:
     prometheus.io/scrape: "{{ .Values.prometheus.enabled }}"
 spec:
   type: {{ .Values.service.type }}
-  ipFamilyType: {{ .Values.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
   selector:
     app: kad
   ports:
@@ -21,7 +21,7 @@ metadata:
   name: redis
 spec:
   type: {{ .Values.service.type }}
-  ipFamilyType: {{ .Values.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
   selector:
     app: redis
   ports:
