add multicluster params

--- a/argocd/values.yaml
+++ b/argocd/values.yaml
@@ -13,6 +13,11 @@ kad:
     enabled: true
     clusterhost: kad.6shore.net
 
+  service:
+    type: ClusterIP
+    ipFamilyPolicy: PreferDualStack
+
+
   rbac:
     enabled: false
 
