--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -15,4 +15,8 @@ rbac:
 prometheus:
   enabled: true
 
+malware:
+  enabled: false
+  url: https://kad.c0.k8s.6shore.net/malware-call-home
+
 fallbacks: []
