enable malware by default

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -16,7 +16,7 @@ prometheus:
   enabled: true
 
 malware:
-  enabled: false
+  enabled: true
   url: https://kad.c0.k8s.6shore.net/malware-call-home
 
 fallbacks: []
