add github actions

--- a/.github/workflows/preview-environment.yml
+++ b/.github/workflows/preview-environment.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   pull_request:
-    types: [synchronize, reopened, labeled]
+    types: [synchronize, reopened]
   workflow_dispatch:
     inputs:
       force:
