--- a/helm/templates/deploy.yml
+++ b/helm/templates/deploy.yml
@@ -63,6 +63,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
 ---
 apiVersion: apps/v1
 kind: Deployment
