--- a/.github/workflows/reusable-backend-build-docker-v2.yaml
+++ b/.github/workflows/reusable-backend-build-docker-v2.yaml
@@ -72,6 +72,17 @@ jobs:
           images: |
             ${{ inputs.docker_registry_repository }}/${{ env.DOCKER_IMAGE_NAME }}
 
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.19.x'
+
+      - name: Install dependencies
+        run: go get .
+
+      - name: Build
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o build_out/kad
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
