--- a/helm/templates/ingress.yml
+++ b/helm/templates/ingress.yml
@@ -1,60 +1,61 @@
-# {{ if and (.Values.ingress.enabled) (not (hasPrefix "vk8s" .Values.cluster)) }}
-# ---
-# apiVersion: traefik.containo.us/v1alpha1
-# kind: Middleware
-# metadata:
-#   name: ratelimit
-# spec:
-#   rateLimit:
-#     average: 3
-#     burst: 3
-# ---
-# apiVersion: traefik.containo.us/v1alpha1
-# kind: Middleware
-# metadata:
-#   name: retry
-# spec:
-#   retry:
-#     attempts: 3
-# ---
-# apiVersion: traefik.containo.us/v1alpha1
-# kind: Middleware
-# metadata:
-#   name: ipwhitelist
-# spec:
-#   ipWhiteList:
-#     sourceRange:
-#    # - 193.71.191.150/32
-#     - 46.19.17.126/32
-#     - ::1/128
-#     ipStrategy:
-#       excludedIPs:
-#       - 192.168.0.0/16
-# ---
-# apiVersion: traefik.containo.us/v1alpha1
-# kind: IngressRoute
-# metadata:
-#   name: kad
-# spec:
-#   entryPoints:
-#     - http
-#     - https
-#   #tls: {}
-#   routes:
-#   - match: HostRegexp(`kad.{domain:.+}`){{ if .Values.ingress.clusterhost }} || HostRegexp(`{{ .Values.ingress.clusterhost }}`){{ end }}
-#     kind: Rule
-#     middlewares:
-#     #- name: ratelimit
-#     - name: retry
-#     #- name: ipwhitelist
-#     services:
-#     - name: kad
-#       port: 80
-#       weight: 1000
-#     {{- range $h, $fb := .Values.fallbacks }} 
-#     # fallback {{ $fb }}
-#     - name: kad-fallback-{{ $h }}
-#       port: 80
-#       weight: 1
-#     {{- end }}
-# {{ end }}
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "app.fullname" . -}}
+{{- $svcPort := .Values.env.PORT -}}
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
+  {{- end }}
+{{- end }}
+{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
+kind: Ingress
+metadata:
+  name: {{ $fullName }}
+  labels:
+    {{- include "app.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
+  rules:
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          {{- range .paths }}
+          - path: {{ .path }}
+            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+            pathType: {{ .pathType }}
+            {{- end }}
+            {{- if .backend }}
+            backend:
+{{ toYaml .backend | indent 14 }}
+            {{- else }}
+            backend:
+              service:
+                name: {{ default $fullName }}
+                port:
+                  number: {{ $svcPort }}
+            {{- end }}
+          {{- end }}
+    {{- end }}
+{{- end }}
