--- a/helm/templates/ingress.yml
+++ b/helm/templates/ingress.yml
@@ -31,7 +31,7 @@ spec:
               service:
                 name: kad
                 port:
-                  number: {{ $svcPort }}
+                  number: 80
             {{- end }}
           {{- end }}
     {{- end }}
